--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 dispersion_solver/dispersion_data/all_data
 
 dispersion_solver/dispersion_data/general_results/images_dispersion/
+
+dispersion_solver/util/__pycache__/
